[tool.poetry]
name = "repl_python3_SQLProject"
version = "0.1.0"
description = ""
authors = ["Mathieu-Arru <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
psycopg2-binary = "^2.9.3"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
